# RestaurantOrderVoiceAgent

./: .gitignore  .railwayignore  ARCHITECTURE.md  CLAUDE.md  RAILWAY_DEPLOYMENT.md  README.md  alembic.ini  build.sh  nixpacks.toml  package.json  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: auth.py  health.py  menu.py  orders.py
app/api/webhooks/: __init__.py  voice.py
app/core/: config.py  dependencies.py  logging.py
app/db/: database.py  models.py
app/services/agent/: agent.py  constants.py  flow_manager.py  item_customizer.py  prompt.py  stage_transitions.py  stages.py  state.py
app/services/call_session/: manager.py  models.py
app/services/menu/: base.py  in_memory_menu.py  repository.py
app/services/ordering/: models.py  parser.py  validator.py
app/services/persistence/: calls.py  orders.py
app/services/speech/: stt.py  tts.py
app/static/: index.html
app/static/assets/: index-A44rDlZC.js  index-BwJfXOY4.js  index-Cf36gx7o.css  index-EgZl4_Sr.css
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: CallCard.css  CallCard.tsx  Header.css  Header.tsx  Login.tsx  MenuView.css  MenuView.tsx  MetricsView.css  MetricsView.tsx  (+2 more)
scripts/: reset_database.sh  reset_database.sql  setup.sh
tests/: conftest.py
tests/fixtures/: test_menu.yaml
tests/unit/: test_auth.py  test_menu_api.py  test_menu_service.py  test_order_calculation.py  test_persistence.py
(+3 files in other folders)
